# commit-editor

./: CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/commit_editor/: __init__.py  app.py  cli.py  git.py  spelling.py
tests/: conftest.py  test_app.py  test_git.py  test_spelling.py  test_wrap.py
